# fft86a

./: CMakeLists.txt  README.md
fft86/: butterfly.hpp  defs.hpp  factors.hpp  fft.hpp  fftw.hpp  scramble.hpp  timer.hpp  transpose.hpp  twiddles.hpp  util.hpp  vec.hpp
src/: butterfly.cpp  factors.cpp  fft.cpp  fft.s  fft86.cpp  fftw.cpp  fourstep.cpp  pfa.cpp  radix4.S  scramble.cpp  selfsort.cpp  transpose.cpp  twiddles.cpp
